--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
   <body>
       <header>
           <nav>
-
+            <ul>
+              <li><a href="https://github.com/devduck123" target="_blank">GitHub</a></li>
+              <li><a href="https://devduck123.hashnode.dev" target="_blank">Hashnode</a></li>
+              <li><a href="https://open-props.style" target="_blank">Open Props</a></li>
+            </ul>
           </nav>
-      </head>
+      </header>
       <main>
           <section id="headline">
             <h1>Hello, world!</h1>
             <p>
                 I'm Tommy Ho, a student who currently resides in the Bay Area.
             </p>
-            <button type="button">Click me</button>
+            <button type="button">Click to know more!</button>
           </section>
       </main>
       <footer></footer>
