--- a/index.html
+++ b/index.html
@@ -10,29 +10,39 @@
       rel="stylesheet"
       href="https://unpkg.com/open-props/normalize.min.css"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
+    <link rel="manifest" href="assets/site.webmanifest" />
     <title>Home</title>
   </head>
   <body>
-      <header>
-          <nav>
-            <ul>
-              <li><a href="https://github.com/devduck123" target="_blank">GitHub</a></li>
-              <li><a href="https://devduck123.hashnode.dev" target="_blank">Hashnode</a></li>
-              <li><a href="https://open-props.style" target="_blank">Open Props</a></li>
-            </ul>
-          </nav>
-      </header>
-      <main>
-          <section id="headline">
-            <h1>Hello, world!</h1>
-            <p>
-                I'm Tommy Ho, a student who currently resides in the Bay Area.
-            </p>
-            <button type="button">Click to know more!</button>
-          </section>
-      </main>
-      <footer></footer>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="https://github.com/devduck123" target="_blank">GitHub</a>
+          </li>
+          <li>
+            <a href="https://devduck123.hashnode.dev" target="_blank"
+              >Hashnode</a
+            >
+          </li>
+          <li>
+            <a href="https://open-props.style" target="_blank">Open Props</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="headline">
+        <h1>Hello, world!</h1>
+        <p>I'm Tommy Ho, a student who currently resides in the Bay Area.</p>
+        <button type="button">Click to know more!</button>
+      </section>
+    </main>
+    <footer></footer>
 
-      <script src="index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
