--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="personal portfolio page" />
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <link rel="stylesheet" href="https://unpkg.com/open-props" />
     <link
@@ -48,13 +49,15 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section id="headline">
         <h1>Hello, world!</h1>
         <p>I'm Tommy Ho, a student who currently resides in the Bay Area.</p>
-        <button type="button">Click to know more!</button>
+        <button type="button">Click to learn more!</button>
       </section>
     </main>
+    
     <footer></footer>
 
     <script src="index.js"></script>
