setup about-me section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,29 @@
     <main>
       <section id="headline">
         <h1>Hello, world!</h1>
-        <p>I'm Tommy Ho, a student who currently resides in the Bay Area.</p>
-        <button type="button">Click to learn more!</button>
+        <p>I'm Tommy Ho, a student that currently resides in the Bay Area.</p>
+        <button id="btn-more" type="button">Click to learn more!</button>
+      </section>
+
+      <section id="about-me">
+        <h2>About Me</h2>
+        <ul>
+          <li>
+            I'm currently a 4th-year undergraduate, attending
+            California-Polytechnic Pomona.
+          </li>
+          <li>
+            I will graduate in June 2022 with a B.S. in Computer Information
+            Systems, with an emphasis in Application Development.
+          </li>
+          <li>
+            I spend most of my free time playing with my dog - her name is
+            "Duck", and she's a German Shepherd/Husky mix!
+          </li>
+        </ul>
       </section>
     </main>
-    
+
     <footer></footer>
 
     <script src="index.js"></script>
